--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="uk">
     <head>
         <meta charset="UTF-8">
@@ -13,6 +14,7 @@
                 <div class="logo">
                     <h1>
                         <img src="images/logo.png" alt="Логотип" height="55" width="66">Мандруй
+
                     </h1>
                     <h2>Туристичний путівник Карпатами</h2>
                     <div id="clock"></div>
@@ -27,16 +29,19 @@
                     <li>
                         <a href="blog.html">Блог</a>
                     </li>
-                    <!-- <li><input type="search" placeholder="Пошук">
-            <button>Пошук</button></li> -->
+                    <li id="search">
+                    <form action="https://oksankak16.github.io/site_html/">
+                    <input type="search" placeholder="Пошук">
+            <button>Пошук</button></li>
+            </form>
                 </ul>
             </nav>
             <ul id="slides">
                 <li class="slide showing"></li>
                 <li class="slide"></li>
                 <li class="slide"></li>
-            <!-- <img src="images/mountain_change.jpeg" alt="Гора" width="980" height="526" class="slider"> -->
-            <!-- <img src="images/img2.jpeg" alt="mountains2" width="980" height="526">
+                <!-- <img src="images/mountain_change.jpeg" alt="Гора" width="980" height="526" class="slider"> -->
+                <!-- <img src="images/img2.jpeg" alt="mountains2" width="980" height="526">
          <img src="images/img3.jpeg" alt="mountains3" width="980" height="526">
          <img src="images/img4.jpeg" alt="mountains4" width="980" height="526">
          <img src="images/img5.jpeg" alt="mountains5" width="980" height="526">
@@ -63,9 +68,11 @@
 <br>
                     <strong>Піші маршрути Карпатами, або трекінг по українськи</strong>
                     <br>Для того аби долучитися до особливого стану єднання з природою, найкраще обирати для відпочинку піші маршрути Карпатами. А мандрувати по горах з нашою компанією – правильний та розумний вибір.
+
                 </p>
             </article>
             <aside>
+            <div>
                 <a href="https://www.karpaty.info/ua/info/useful/telephone/">
                     <h4>Контактні телефони Гірських пошуково-рятувальних підрозділів</h4>
                     <img src="images/save.jpg" alt="контакти_рятувальників">
@@ -78,6 +85,7 @@
                     <h4>Найближча подія</h4>
                     <img src="images/гід.png" alt="події">
                 </a>
+            </div>
             </aside>
         </main>
         <footer>
@@ -88,29 +96,29 @@
                 <p>0671030220</p>
             </section>
             <section>
-<button id="show">Напишіть нам!</button>
-<dialog>
-            <form class="dialog" action="https://formspree.io/oksankak16@gmail.com" method="POST">
-                <label>
-                    <input type="text" placeholder="Ваше ім'я" name="your_name">
-                </label>
-                <br>
-                <br>
-                <label>
-                    <input type="email" placeholder="Електронна адреса" name="your_address">
-                </label>
-                <br>
-                <br>
-                <label>
-                    <textarea name="your comments" cols="30" rows="5" placeholder="Ваше повідомлення"></textarea>
-                </label>
-                <label>
-                    <br>
-                    <br>
-                    <input type="submit" value="Відправити">
-                </label>
-            </form>
-</dialog>
+                <button id="show">Напишіть нам!</button>
+                <dialog>
+                    <form class="dialog" action="https://formspree.io/oksankak16@gmail.com" method="POST">
+                        <label>
+                            <input type="text" placeholder="Ваше ім'я" name="your_name">
+                        </label>
+                        <br>
+                        <br>
+                        <label>
+                            <input type="email" placeholder="Електронна адреса" name="your_address">
+                        </label>
+                        <br>
+                        <br>
+                        <label>
+                            <textarea name="your comments" cols="30" rows="5" placeholder="Ваше повідомлення"></textarea>
+                        </label>
+                        <label>
+                            <br>
+                            <br>
+                            <input type="submit" value="Відправити">
+                        </label>
+                    </form>
+                </dialog>
             </section>
         </footer>
         <article>
