--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                         <a href="blog.html">Блог</a>
                     </li>
                     <li id="search">
-                    <form action="https://oksankak16.github.io/site_html/">
+                    <!-- <form action="https://oksankak16.github.io/site_html/"> -->
                     <input type="search" placeholder="Пошук">
             <button>Пошук</button></li>
-            </form>
+            <!-- </form> -->
                 </ul>
             </nav>
             <ul id="slides">
