--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </li>
                     <li id="search">
                     <!-- <form action="https://oksankak16.github.io/site_html/"> -->
-                    <input type="search" placeholder="Пошук">
+                    <input id='placeSearch' type="search" placeholder="Пошук">
             <button>Пошук</button></li>
             <!-- </form> -->
                 </ul>
